--- a/uppg1.html
+++ b/uppg1.html
@@ -13,5 +13,9 @@
         Ett nytt stycke text
         <a href="https://teknikum.se">Teknikum</a>
     </p>
+    <p>
+        Ett stycke med en bild
+        <img src="logga.jpg" alt="Växjö Kommun">
+    </p>
 </body>
 </html>
