--- a/uppg1.html
+++ b/uppg1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Uppgift 1</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         Ett nytt stycke text
         <a href="https://teknikum.se">Teknikum</a>
     </p>
-    <p>
+    <p class="altP">
         Ett stycke med en bild
         <img src="logga.jpg" alt="Växjö Kommun">
     </p>
