--- a/uppg1.html
+++ b/uppg1.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <title>Uppgift 1</title>
-</head>
-<body>
-    <h1>Uppgift 1</h1>
-    <p>Ett stycke text</p>
-    <p>
-        Ett nytt stycke text
-        <a href="https://teknikum.se">Teknikum</a>
-    </p>
-    <p class="altP">
-        Ett stycke med en bild
-        <img src="logga.jpg" alt="Växjö Kommun">
-    </p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style.css" rel="stylesheet">
+        <title>Uppgift 1</title>
+    </head>
+    <body>
+        <div class="wrapper">        
+            <header>
+                <h1>Uppgift 1</h1>
+            </header>
+            <nav>
+                <ul>
+                    <li><a href="uppg1.html">Startsida</a></li>
+                    <li><a href="#">Sida 2</a></li>
+                    <li><a href="#">Sida 3</a></li>
+                </ul>
+            </nav>
+            <main>
+                <section>
+                    <p>Ett stycke text</p>
+                    <p>
+                        Ett nytt stycke text med länk till 
+                        <a href="https://teknikum.se">Teknikum</a>
+                    </p>
+                </section>
+                <section>
+                    <p class="altP">
+                        Ett stycke med en bild
+                        <img src="logga.jpg" alt="Växjö Kommun">
+                    </p>  
+                </section>
+            </main>
+            <footer>
+                <p>En sidfot</p>
+            </footer>
+        </div>
+    </body>
 </html>
