Lagt till ett formulär

--- a/uppg1.html
+++ b/uppg1.html
@@ -33,6 +33,23 @@
                         <img src="logga.jpg" alt="Växjö Kommun">
                     </p>  
                 </section>
+                <section>
+                    <form action="tack.html" method="post">
+                        <label for="text">Text</label>
+                        <input type="text" id="text" name="text"><br>
+                        <input type="radio" name="radio" id="ja" value="ja"><label for="ja">Ja</label><br>
+                        <input type="radio" name="radio" id="nej" value="nej"><label for="nej">Nej</label><br>
+                        <select name="bil">
+                            <option value="volvo">Volvo</option>
+                            <option value="bmw">BMW</option>
+                            <option value="honda">Honda</option>
+                            <option value="bentley">Bentley</option>
+                            <option value="hundkoja">Hundkoja</option>
+                        </select><br>
+                        <input type="submit" value="Skicka">
+                    </form>
+
+                </section>
             </main>
             <footer>
                 <p>En sidfot</p>
