--- a/uppg1.html
+++ b/uppg1.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style.css" rel="stylesheet">
+        <script src="test.js" defer></script>
         <title>Uppgift 1</title>
     </head>
     <body>
@@ -39,7 +40,7 @@
                         <input type="text" id="text" name="text"><br>
                         <input type="radio" name="radio" id="ja" value="ja"><label for="ja">Ja</label><br>
                         <input type="radio" name="radio" id="nej" value="nej"><label for="nej">Nej</label><br>
-                        <select name="bil">
+                        <select name="bil" size="3">
                             <option value="volvo">Volvo</option>
                             <option value="bmw">BMW</option>
                             <option value="honda">Honda</option>
